[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "A client and server SSH library."
documentation = "https://docs.rs/russh"
edition = "2018"
homepage = "https://github.com/warp-tech/russh"
keywords = ["ssh"]
license = "Apache-2.0"
name = "russh"
readme = "../README.md"
repository = "https://github.com/warp-tech/russh"
version = "0.49.3-alpha.0"
rust-version = "1.65"

[package.metadata.cargo-machete]
ignored = ["inout"]

[features]
default = ["flate2"]
legacy-ed25519-pkcs8-parser = ["yasna"]

[dependencies]
aes.workspace = true
# use aes::cipher::inout::PadError;
inout = { version = "0.1", features = ["std"] }
aes-gcm = "0.10"
cbc = { version = "0.1" }
async-trait.workspace = true
bitflags = "2.0"
byteorder.workspace = true
bytes.workspace = true
block-padding = { version = "0.3", features = ["std"] }
chacha20 = "0.9"
ctr = "0.9"
curve25519-dalek = "4.1.3"
delegate.workspace = true
digest.workspace = true
data-encoding = "2.3"
der = "0.7"
elliptic-curve = { version = "0.13", features = ["ecdh"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8"] }
flate2 = { version = "1.0", optional = true }
futures.workspace = true
generic-array = "0.14"
hex-literal = "0.4"
hmac.workspace = true
tracing.workspace = true
md5 = "0.7"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.13"
p256 = { version = "0.13", features = ["ecdh"] }
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh"] }
poly1305 = "0.8"
pkcs5 = "0.7"
pkcs8 = { version = "0.10", features = ["pkcs5", "encryption"] }
pkcs1 = "0.7"
rand.workspace = true
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
rsa.workspace = true
russh-cryptovec = { version = "0.48.0", path = "../cryptovec", features = [
    "ssh-encoding",
] }
sha1.workspace = true
sha2.workspace = true
signature.workspace = true
ssh-encoding.workspace = true
ssh-key.workspace = true
subtle = "2.4"
spki = "0.7"
sec1 = { version = "0.7", features = ["pkcs8"] }
thiserror.workspace = true
russh-util = { version = "0.48.0", path = "../russh-util" }
des = "0.8.1"
tokio = { workspace = true, features = [
    "io-util",
    "sync",
    "time",
    "net",
    "signal",
] }
yasna = { version = "0.5.0", features = [
    "bit-vec",
    "num-bigint",
], optional = true }
pbkdf2 = "0.12"
anyhow.workspace = true

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.17.0", features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "macros",
    "process",
    "test-util",
] }
rand = "0.8.5"
shell-escape = "0.1"
tokio-fd = "0.3"
termion = "2"
ratatui = "0.29.0"
tempdir = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
] }
tokio-stream.workspace = true
russh-sftp = "2.0.5"
home = "0.5"


[target.'cfg(windows)'.dependencies]
pageant = { version = "0.0.1-beta.3", path = "../pageant" }
